# fintrack-ai

./: .gitignore  BUDGETING_APPROACH_RECOMMENDATION.md  BUDGET_SYSTEM_DESIGN.md  CATEGORY_AND_BUDGET_DESIGN.md  CATEGORY_BUDGET_APPROACH_COMPARISON.md  CATEGORY_DELETE_AND_SHARING_ANALYSIS.md  CATEGORY_DELETE_SAFETY_ANALYSIS.md  CATEGORY_STRUCTURE_RECOMMENDATION.md  IMPLEMENTATION_SUMMARY.md  WALLET_SELECTION_DESIGN.md  WHATSAPP_INTEGRATION_DESIGN.md
backend/: .env  .gitignore  Cargo.toml  INSTALL_SQLX.md  MIGRATION_GUIDE.md  README.md  env.example
backend/migrations/: 20240101000000_init.sql  20240102000000_add_username.sql  20240103000000_add_budgets.sql  20240104000000_add_credit_limit.sql  20240105000000_add_soft_delete_wallets.sql  20240106000000_add_is_default_wallet.sql  20240107000000_add_user_whatsapp_mappings.sql  20240108000000_add_soft_delete_categories_budgets.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: auth.rs  budget.rs  category.rs  dashboard.rs  health.rs  mod.rs  transaction.rs  wallet.rs
backend/src/middleware/: auth.rs
backend/src/models/: budget.rs  category.rs  mod.rs  transaction.rs  user.rs  wallet.rs
backend/src/utils/: jwt.rs  password.rs
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/contexts/: AuthContext.tsx  (+2 more)
wa-service/: .env copy  .gitignore  API_DOCUMENTATION.md  README.md  WhatsApp_Service.postman_collection.json  WhatsApp_Service.postman_environment.json  package.json  tsconfig.json
(+47 files in other folders)
