[package]
name = "fintrack-api"
version = "0.1.0"
edition = "2021"
authors = ["FinTrack Team"]
description = "High-performance API for FinTrack wallet tracking app"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

